# fde-plus

./: .gitattributes  .gitignore  .gitmodules
fde-plus/: Cargo.toml  plot.ipynb  plot.py
fde-plus/benches/: elgamal.rs  elgamal_sr1024.rs  elgamal_sr256.rs  elgamal_sr512.rs
fde-plus/src/: lib.rs
fde-plus/src/tests/: mod.rs
fde-plus/src/veck/: mod.rs
fde-plus/src/veck/elgamal/: encryption.rs  mod.rs
snark/: go.mod  main.go  plot.py  snark.go  snark_test.go
